--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -106,6 +106,7 @@ RUN apt-get install -y libopencv-dev python3-opencv qt5-default libvtk6-dev zlib
                         libtbb-dev 
 
 RUN apt install -y wget unzip
+RUN apt-get update
 
 # Setup user information
 ARG username0=bag
@@ -115,7 +116,6 @@ RUN adduser $username0 root
 RUN adduser $username0 sudo
 RUN echo $username0':rsx123' | chpasswd
 USER $username0
-RUN mkdir -p /home/$username0/rover_ws/src/rsx-rover
 
 RUN echo "source /opt/ros/noetic/setup.bash" >> ~/.bashrc
 RUN echo "export USER=$username0" >> ~/.bashrc
