--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,3 +200,7 @@ include_directories(
 
 add_executable(drive_sender_node rover/drive/src/drive_sender_node.cpp)
 target_link_libraries(drive_sender_node ${catkin_LIBRARIES})
+
+catkin_install_python(PROGRAMS scripts/base_comms_check.py scripts/jetson_comms_check.py
+ DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
