Testing branch for local_planner

--- a/rover/simulation/CMakeLists.txt
+++ b/rover/simulation/CMakeLists.txt
@@ -12,3 +12,7 @@ foreach(dir config launch meshes urdf)
 	install(DIRECTORY ${dir}/
 		DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/${dir})
 endforeach(dir)
+
+catkin_install_python(PROGRAMS /rover/simulation/scripts/controller.py
+DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
