--- a/rover/autonomy/config/costmap_common.yaml
+++ b/rover/autonomy/config/costmap_common.yaml
@@ -1,6 +1,6 @@
 obstacle_range: 10.0
 raytrace_range: 10.5
-footprint: [[x0, y0], [x1, y1], ... [xn, yn]]
+footprint: [[x0, y0], [x1, y1], ... ,[xn, yn]]
 #robot_radius: ir_of_robot
 inflation_radius: 0.55
 
