Setting up NavStack and Local Planner. Some changes in the simulation

--- a/rover/autonomy/config/base_local_planner.yaml
+++ b/rover/autonomy/config/base_local_planner.yaml
@@ -1,6 +1,6 @@
 TebLocalPlannerROS:
 
- odom_topic: /odom/ekf/enc_imu
+ odom_topic: /robot_base_velocity_controller/odom
  map_frame: /odom
     
  # Trajectory
