--- a/rover/autonomy/config/costmap_common.yaml
+++ b/rover/autonomy/config/costmap_common.yaml
@@ -7,4 +7,4 @@ inflation_radius: 0.55
 observation_sources: point_cloud_sensor
 
 # Set to values for sim for now
-point_cloud_sensor: {sensor_frame: lidar_link, data_type: PointCloud2, topic: /os1_cloud_node/points, marking: true, clearing: true}
+point_cloud_sensor: {sensor_frame: lidar_link, data_type: PointCloud2, topic: rrbot/laser/scan, marking: true, clearing: true} # lidar topic
