Mapping in Autonomy and Sim functional

--- a/rover/simulation/config/control.yaml
+++ b/rover/simulation/config/control.yaml
@@ -5,8 +5,8 @@ robot_base_joint_publisher:
 
 robot_base_velocity_controller:
   type: "diff_drive_controller/DiffDriveController"
-  left_wheel: ['front_left_wheel_joint', 'rear_left_wheel_joint']
-  right_wheel: ['front_right_wheel_joint', 'rear_right_wheel_joint']
+  left_wheel: ['front_left_wheel_joint', 'middle_left_wheel_joint', 'rear_left_wheel_joint']
+  right_wheel: ['front_right_wheel_joint', 'middle_right_wheel_joint', 'rear_right_wheel_joint']
   publish_rate: 50
   pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
   twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
@@ -23,19 +23,21 @@ robot_base_velocity_controller:
   linear:
     x:
       has_velocity_limits    : true
-      max_velocity           : 2.0   
+      max_velocity           : 10.0   
       has_acceleration_limits: true
       max_acceleration       : 3.0   
   angular:
     z:
       has_velocity_limits    : true
-      max_velocity           : 3.0   
+      max_velocity           : 6.0   
       has_acceleration_limits: true
-      max_acceleration       : 6.0   
+      max_acceleration       : 10.0   
 
 /gazebo_ros_control:
     pid_gains:
       front_left_wheel_joint: {p: 20.0, i: 0.01, d: 0.0, i_clamp: 0.0}
       front_right_wheel_joint: {p: 20.0, i: 0.01, d: 0.0, i_clamp: 0.0}
+      middle_right_wheel_joint: {p: 20.0, i: 0.01, d: 0.0, i_clamp: 0.0}
+      middle_left_wheel_joint: {p: 20.0, i: 0.01, d: 0.0, i_clamp: 0.0}
       rear_left_wheel_joint: {p: 20.0, i: 0.01, d: 0.0, i_clamp: 0.0}
       rear_right_wheel_joint: {p: 20.0, i: 0.01, d: 0.0, i_clamp: 0.0}
