Fixed -nan problem in map_saver

--- a/rover/simulation/config/gmapping_params.yaml
+++ b/rover/simulation/config/gmapping_params.yaml
@@ -1,5 +1,6 @@
-base_frame: base_footprint
-# odom_frame: odom
+base_frame: os_sensor
+use_sim_time: true
+odom_frame: os_sensor
 map_update_interval: 5.0
 maxUrange: 10.0
 maxRange: 10.0
