--- a/rover/autonomy/maps/current_map.yaml
+++ b/rover/autonomy/maps/current_map.yaml
@@ -1,6 +1,6 @@
 image: /home/garvish/rsx_ws/src/rsx-rover/rover/autonomy/maps/current_map.pgm
-resolution: 0.408230
-origin: [-8.382173, -12.029311, -nan]
+resolution: 1.505817
+origin: [-39.833893, -35.456940, 0.000000]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
