--- a/rover/simulation/config/local_costmap.yaml
+++ b/rover/simulation/config/local_costmap.yaml
@@ -7,5 +7,6 @@ plugins:
   - {name: obstacles_laser,           type: "costmap_2d::ObstacleLayer"}
   - {name: inflation,                 type: "costmap_2d::InflationLayer"}
 
-width: 10
-height: 10
+width: 5
+height: 5
+update_frequency: 2.0
