--- a/rover/autonomy/config/local_costmap.yaml
+++ b/rover/autonomy/config/local_costmap.yaml
@@ -1,10 +1,29 @@
-local_costmap:
-  global_frame: odom
-  robot_base_frame: base_link
-  update_frequency: 5.0
-  publish_frequency: 2.0
-  static_map: false
-  rolling_window: true
-  width: 6.0
-  height: 6.0
-  resolution: 0.05
+global_frame: odom # sometimes '/odom' works but in documentation, it says that '/odom' is discontinued in noetic. Use 'odom'
+rolling_window: true # If the static_map parameter is set to true, this should be set to false 
+# Says that we don't want the local planner to be initialized from a static map
+track_unknown_space: true
+
+plugins:
+  - {name: obstacles_laser,           type: "costmap_2d::ObstacleLayer"}
+  - {name: inflation,                 type: "costmap_2d::InflationLayer"}
+
+width: 5
+height: 5
+update_frequency: 2.0
+
+
+
+
+
+
+
+# local_costmap:
+#   global_frame: odom
+#   robot_base_frame: base_link
+#   update_frequency: 5.0
+#   publish_frequency: 2.0
+#   static_map: false
+#   rolling_window: true
+#   width: 6.0
+#   height: 6.0
+#   resolution: 0.05
