Trying some changes to make ROS work

--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,7 @@
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>ros_phoenix</build_export_depend>
   <build_export_depend>message_filters</build_export_depend>
+  <build_export_depend>message_runtime</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
