--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ add_definitions(${PCL_DEFINITIONS})
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES 
-  ArmInputs.msg
+  msg/ArmInputs.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -211,5 +211,5 @@ target_link_libraries(drive_sender_node ${catkin_LIBRARIES})
 add_executable(lidar_pcl_subscriber rover/autonomy/scripts/point_cloud_subscriber.cpp rover/autonomy/scripts/pcl_traversibility_score.cpp rover/autonomy/scripts/segment_pcl.cpp)
 target_link_libraries(lidar_pcl_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES})
 
-catkin_install_python(PROGRAMS scripts/base_comms_check.py scripts/jetson_comms_check.py
+catkin_install_python(PROGRAMS scripts/base_comms_check.py scripts/jetson_comms_check.py rover/arm/scripts/controller.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
