Made changes in controller and manual node codes. Remember to source the terminal with setup.bash

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,16 +11,8 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
-  message_filters
   message_generation
 )
-
-find_package(PCL 1.2 REQUIRED)
-
-# Variables set by the pcl config.cmake.in file
-include_directories(${PCL_INCLUDE_DIRS})
-link_directories(${PCL_LIBRARY_DIRS})
-add_definitions(${PCL_DEFINITIONS})
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -57,15 +49,16 @@ add_definitions(${PCL_DEFINITIONS})
 
 ## Generate messages in the 'msg' folder
 add_message_files(
-  FILES 
-  msg/ArmInputs.msg
+  FILES
+  ArmInputs.msg
 )
 
 ## Generate services in the 'srv' folder
-add_service_files(
-  FILES
-  Corrections.srv
-)
+# add_service_files(
+#   FILES
+#   Service1.srv
+#   Service2.srv
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -110,10 +103,10 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-    #INCLUDE_DIRS include
-    #LIBRARIES Rover
-    CATKIN_DEPENDS roscpp rospy std_msgs message_filters message_runtime
-    DEPENDS system_lib
+#  INCLUDE_DIRS include
+#  LIBRARIES Rover
+ CATKIN_DEPENDS roscpp rospy std_msgs message_runtime
+#  DEPENDS system_lib
 )
 
 ###########
@@ -205,11 +198,9 @@ include_directories(
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
 
+catkin_install_python(PROGRAMS rover/arm/scripts/controller.py rover/arm/scripts/manual/manual_joystick_new.py
+DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
 add_executable(drive_sender_node rover/drive/src/drive_sender_node.cpp)
 target_link_libraries(drive_sender_node ${catkin_LIBRARIES})
-
-add_executable(lidar_pcl_subscriber rover/autonomy/scripts/point_cloud_subscriber.cpp rover/autonomy/scripts/pcl_traversibility_score.cpp rover/autonomy/scripts/segment_pcl.cpp)
-target_link_libraries(lidar_pcl_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES})
-
-catkin_install_python(PROGRAMS scripts/base_comms_check.py scripts/jetson_comms_check.py rover/arm/scripts/controller.py
- DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
