Making changes into the controller, manual, safety and CAN nodes to work together in ROS. There will be multiple commits for these changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,7 +198,7 @@ include_directories(
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
 
-catkin_install_python(PROGRAMS rover/arm/scripts/controller.py rover/arm/scripts/manual/manual_joystick_new.py
+catkin_install_python(PROGRAMS rover/arm/scripts/controller.py rover/arm/scripts/manual/manual_joystick_new.py rover/arm/scripts/safety/safety.py rover/arm/scripts/CAN/CAN.py
 DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
