Changing parameters as we keep on testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,9 +198,9 @@ include_directories(
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
 
-catkin_install_python(PROGRAMS rover/arm/scripts/controller.py rover/arm/scripts/manual/manual.py rover/arm/scripts/safety/safety.py rover/arm/scripts/CAN/CAN_send.py rover/arm/scripts/CAN/CAN_recv.py
+catkin_install_python(PROGRAMS
 DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
-add_executable(drive_sender_node rover/drive/src/drive_sender_node.cpp)
-target_link_libraries(drive_sender_node ${catkin_LIBRARIES})
+# add_executable(drive_sender_node rover/drive/src/drive_sender_node.cpp)
+# target_link_libraries(drive_sender_node ${catkin_LIBRARIES})
