--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,8 @@ add_message_files(
 add_service_files(
   FILES
   Corrections.srv
+  GoToArmPos.srv
+  SaveArmPos.srv
 )
 
 ## Generate actions in the 'action' folder
