Added node to convert pcl to pcd files, and node to subscribe to grid map msgs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,9 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   message_filters
+  grid_map_core
+  grid_map_pcl
+  grid_map_ros
 )
 
 find_package(PCL 1.2 REQUIRED)
@@ -211,6 +214,12 @@ include_directories(
 
 add_executable(lidar_pcl_subscriber rover/autonomy/scripts/point_cloud_subscriber.cpp rover/autonomy/scripts/pcl_traversibility_score.cpp rover/autonomy/scripts/segment_pcl.cpp)
 target_link_libraries(lidar_pcl_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+
+add_executable(pcd_writer_subscriber rover/autonomy/scripts/pcd_writer_node.cc)
+target_link_libraries(pcd_writer_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+
+add_executable(grid_map_subscriber rover/autonomy/scripts/grid_map_node.cc)
+target_link_libraries(grid_map_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${G})
 
 catkin_install_python(PROGRAMS scripts/base_comms_check.py scripts/jetson_comms_check.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
