--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 bryan-docker
 rover/autonomy/tests/lidar.bag
 rover/autonomy/tests/icsens-visual-inertial-lidar-dataset-1.bag
+rover/autonomy/tests/lego_loam_recording.bag
+rover/autonomy/tests/lego_loam_recording.orig.bag
+rover/autonomy/tests/myhal_arena.bag
+rover/autonomy/tests/pcd/test_pcd.pcd
