--- a/rover/drive/launch/goose.yaml
+++ b/rover/drive/launch/goose.yaml
@@ -11,26 +11,26 @@ talons:
     I: 0.015
     D: 175.0
     inverted: True
-  mid_left:
-    id: 5
-    P: 3.0
-    I: 0.015
-    D: 175.0
-    inverted: False
-  mid_right:
-    id: 2
-    P: 3.0
-    I: 0.015
-    D: 175.0
-    inverted: True
+  # mid_left:
+  #   id: 5
+  #   P: 3.0
+  #   I: 0.015
+  #   D: 175.0
+  #   inverted: False
+  # mid_right:
+  #   id: 2
+  #   P: 3.0
+  #   I: 0.015
+  #   D: 175.0
+  #   inverted: True
   front_left:
-    id: 4
+    id: 1
     P: 3.0
     I: 0.015
     D: 175.0
     inverted: False
   front_right:
-    id: 1
+    id: 4
     P: 3.0
     I: 0.015
     D: 175.0
