--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 bryan-docker
 rover/autonomy/tests/lidar.bag
 rover/autonomy/tests/icsens-visual-inertial-lidar-dataset-1.bag
+*.pyc
+*.pyo
+__pycache__/
