--- a/rover/autonomy/config/move_base.yaml
+++ b/rover/autonomy/config/move_base.yaml
@@ -1,5 +1,5 @@
 controller_frequency: 5 # default: 5
-recovery_behaviour_enabled: true
+recovery_behaviour_enabled: false
 
 NavfnROS:
   allow_unknown: true # default: true # Specifies whether or not to allow navfn to create plans that traverse unknown space.
@@ -9,71 +9,25 @@ NavfnROS:
   # planner_window_x: 100.0 # default: 0.0
   # planner_window_y: 100.0 # default: 0.0
 
-TrajectoryPlannerROS:
-  # Robot Configuration Parameters
-  acc_lim_x: 0.5
-  acc_lim_theta: 0.32 # defualt: 3.2
-
-  max_vel_x: 0.5
-  min_vel_x: 0.0 # defualt: 0.0
-
-  max_vel_theta: 0.1
-  min_vel_theta: -0.1
-  min_in_place_vel_theta: 0.2
-
-  holonomic_robot: false
-  escape_vel: -0.1
-
-  # Goal Tolerance Parameters
-  yaw_goal_tolerance: 0.1
-  xy_goal_tolerance: 0.2
-  latch_xy_goal_tolerance: false
-
-  # Forward Simulation Parameters
-  sim_time: 2.0
-  sim_granularity: 0.02
-  angular_sim_granularity: 0.02
-  vx_samples: 6
-  vtheta_samples: 20
-  controller_frequency: 20 # default: 20
-
-  # Trajectory scoring parameters
-  meter_scoring: true # Whether the gdist_scale and pdist_scale parameters should assume that goal_distance and path_distance are expressed in units of meters or cells. Cells are assumed by default (false).
-  occdist_scale:  0.01 #The weighting for how much the controller should attempt to avoid obstacles. default 0.01
-  pdist_scale: 0.75  #     The weighting for how much the controller should stay close to the path it was given . default 0.6
-  gdist_scale: 1.0 #     The weighting for how much the controller should attempt to reach its local goal, also controls speed  default 0.8
-
-  heading_lookahead: 0.325  #How far to look ahead in meters when scoring different in-place-rotation trajectories
-  heading_scoring: false  #Whether to score based on the robot's heading to the path or its distance from the path. default false
-  heading_scoring_timestep: 0.8   #How far to look ahead in time in seconds along the simulated trajectory when using heading scoring (double, default: 0.8)
-  dwa: true #Whether to use the Dynamic Window Approach (DWA)_ or whether to use Trajectory Rollout
-  simple_attractor: false
-  publish_cost_grid_pc: true  
-
-  # Oscillation Prevention Parameters
-  oscillation_reset_dist: 0.25 #How far the robot must travel in meters before oscillation flags are reset (double, default: 0.05)
-  escape_reset_dist: 0.1
-  escape_reset_theta: 0.1
-
 DWAPlannerROS:
   # Robot configuration parameters  
   acc_lim_x: 0.5 # default: 5
   acc_lim_y: 0.0 # default: 0
   acc_lim_th: 0.32 # default: 3.2
 
-  max_vel_x: 0.5 # default: 6.0
-  min_vel_x: 0.0 # default: 0.0
+  max_vel_x: 0.3 # default: 6.0
+  min_vel_x: 0.2 # default: 0.0
   # the simuation rover does not move in y direction
   max_vel_y: 0.0 # default: 0.0
   min_vel_y: 0.0 # default: 0.0
 
-  max_vel_trans: 0.5 # default: 0.5
-  min_vel_trans: 0.01 # default: 0.1
-  max_vel_rot: 0.1
-  min_vel_rot: -0.1
+  max_vel_trans: 0.3 # default: 0.5
+  min_vel_trans: 0.2 # default: 0.1
+  max_vel_rot: 0.5
+  min_vel_rot: 0.3
 
   # Goal Tolerance Parameters
-  yaw_goal_tolerance: 0.1
+  yaw_goal_tolerance: 0.2
   xy_goal_tolerance: 0.2
   latch_xy_goal_tolerance: false
 
@@ -97,6 +51,54 @@ DWAPlannerROS:
   publish_cost_grid: true
   # # Oscillation Prevention Parameters
   # oscillation_reset_dist: 0.25 #How far the robot must travel in meters before oscillation flags are reset (double, default: 0.05)
+
+
+
+# TrajectoryPlannerROS:
+#   # Robot Configuration Parameters
+#   acc_lim_x: 0.5
+#   acc_lim_theta: 0.32 # defualt: 3.2
+
+#   max_vel_x: 0.5
+#   min_vel_x: 0.0 # defualt: 0.0
+
+#   max_vel_theta: 0.1
+#   min_vel_theta: -0.1
+#   min_in_place_vel_theta: 0.2
+
+#   holonomic_robot: false
+#   escape_vel: -0.1
+
+#   # Goal Tolerance Parameters
+#   yaw_goal_tolerance: 0.1
+#   xy_goal_tolerance: 0.2
+#   latch_xy_goal_tolerance: false
+
+#   # Forward Simulation Parameters
+#   sim_time: 2.0
+#   sim_granularity: 0.02
+#   angular_sim_granularity: 0.02
+#   vx_samples: 6
+#   vtheta_samples: 20
+#   controller_frequency: 20 # default: 20
+
+#   # Trajectory scoring parameters
+#   meter_scoring: true # Whether the gdist_scale and pdist_scale parameters should assume that goal_distance and path_distance are expressed in units of meters or cells. Cells are assumed by default (false).
+#   occdist_scale:  0.01 #The weighting for how much the controller should attempt to avoid obstacles. default 0.01
+#   pdist_scale: 0.75  #     The weighting for how much the controller should stay close to the path it was given . default 0.6
+#   gdist_scale: 1.0 #     The weighting for how much the controller should attempt to reach its local goal, also controls speed  default 0.8
+
+#   heading_lookahead: 0.325  #How far to look ahead in meters when scoring different in-place-rotation trajectories
+#   heading_scoring: false  #Whether to score based on the robot's heading to the path or its distance from the path. default false
+#   heading_scoring_timestep: 0.8   #How far to look ahead in time in seconds along the simulated trajectory when using heading scoring (double, default: 0.8)
+#   dwa: true #Whether to use the Dynamic Window Approach (DWA)_ or whether to use Trajectory Rollout
+#   simple_attractor: false
+#   publish_cost_grid_pc: true  
+
+#   # Oscillation Prevention Parameters
+#   oscillation_reset_dist: 0.25 #How far the robot must travel in meters before oscillation flags are reset (double, default: 0.05)
+#   escape_reset_dist: 0.1
+#   escape_reset_theta: 0.1
 
 
 
