added grid map traversability pipeline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -215,8 +215,8 @@ include_directories(
 add_executable(lidar_pcl_subscriber rover/autonomy/scripts/point_cloud_subscriber.cpp rover/autonomy/scripts/pcl_traversibility_score.cpp rover/autonomy/scripts/segment_pcl.cpp)
 target_link_libraries(lidar_pcl_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES})
 
-add_executable(pcd_writer_subscriber rover/autonomy/scripts/pcd_writer_node.cc)
-target_link_libraries(pcd_writer_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+add_executable(pcl_to_pcd rover/autonomy/scripts/pcl_to_pcd.cc)
+target_link_libraries(pcl_to_pcd ${catkin_LIBRARIES} ${PCL_LIBRARIES})
 
 add_executable(grid_map_subscriber rover/autonomy/scripts/grid_map_node.cc)
 target_link_libraries(grid_map_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${G})
