access gps location from wifi (S&R Task)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,6 +202,6 @@ include_directories(
 add_executable(drive_sender_node rover/drive/src/drive_sender_node.cpp)
 target_link_libraries(drive_sender_node ${catkin_LIBRARIES})
 
-catkin_install_python(PROGRAMS scripts/base_comms_check.py scripts/jetson_comms_check.py gui/gui.py gui/recordBag.py
+catkin_install_python(PROGRAMS rover/autonomy/scripts/gpsLocFromWIFI.py scripts/base_comms_check.py scripts/jetson_comms_check.py gui/gui.py gui/recordBag.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
