--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,6 @@ find_package(catkin REQUIRED COMPONENTS
   geometry_msgs
   message_generation
   message_filters
-  grid_map_core
-  grid_map_pcl
-  grid_map_ros
 )
 
 
@@ -228,14 +225,14 @@ include_directories(
 add_executable(drive_sender_node rover/drive/src/drive_sender_node.cpp)
 target_link_libraries(drive_sender_node ${catkin_LIBRARIES})
 
-add_executable(lidar_pcl_subscriber rover/autonomy/scripts/point_cloud_subscriber.cpp rover/autonomy/scripts/pcl_traversibility_score.cpp rover/autonomy/scripts/segment_pcl.cpp)
-target_link_libraries(lidar_pcl_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+# add_executable(lidar_pcl_subscriber rover/autonomy/scripts/point_cloud_subscriber.cpp rover/autonomy/scripts/pcl_traversibility_score.cpp rover/autonomy/scripts/segment_pcl.cpp)
+# target_link_libraries(lidar_pcl_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES})
 
-add_executable(pcd_writer_subscriber rover/autonomy/scripts/pcd_writer_node.cc)
-target_link_libraries(pcd_writer_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+# add_executable(pcd_writer_subscriber rover/autonomy/scripts/pcd_writer_node.cc)
+# target_link_libraries(pcd_writer_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES})
 
-add_executable(grid_map_subscriber rover/autonomy/scripts/grid_map_node.cc)
-target_link_libraries(grid_map_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${G})
+# add_executable(grid_map_subscriber rover/autonomy/scripts/grid_map_node.cc)
+# target_link_libraries(grid_map_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${G})
 
-catkin_install_python(PROGRAMS scripts/base_comms_check.py scripts/jetson_comms_check.py
- DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+# catkin_install_python(PROGRAMS scripts/base_comms_check.py scripts/jetson_comms_check.py
+#  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
