Stuff that makes arm and rover work

--- a/rover/autonomy/config/costmap_common.yaml
+++ b/rover/autonomy/config/costmap_common.yaml
@@ -19,7 +19,7 @@ static:
 obstacles_laser:
     observation_sources: point_cloud_sensor
     point_cloud_sensor: {sensor_frame: velodyne, data_type: PointCloud2, topic: /velodyne_points, marking: true, clearing: true} # lidar topic
-    laser_scan_sensor: {sensor_frame: velodyne, data_type: LaserScan, topic: /scan, marking: true, clearing: true} # scan topic
+    laser_scan_sensor: {sensor_frame: velodyne, data_type: LaserScan, topic: /scan_collapsed, marking: true, clearing: true} # scan topic
 
 inflation:
     inflation_radius: 0.4
