--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -236,3 +236,7 @@ target_link_libraries(drive_sender_node ${catkin_LIBRARIES})
 
 # catkin_install_python(PROGRAMS scripts/base_comms_check.py scripts/jetson_comms_check.py
 #  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
+catkin_install_python(PROGRAMS rover/autonomy/scripts/gps_coordinate_recorder.py 
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
