--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -223,6 +223,9 @@ target_link_libraries(drive_sender_node ${catkin_LIBRARIES})
 add_executable(GNSSLocalization rover/autonomy/src/GNSSLocalization.cpp)
 target_link_libraries(GNSSLocalization ${catkin_LIBRARIES})
 
+add_executable(GNSSTargetAid rover/autonomy/src/GNSSTargetAid.cpp)
+target_link_libraries(GNSSTargetAid ${catkin_LIBRARIES})
+
 # add_executable(lidar_pcl_subscriber rover/autonomy/scripts/point_cloud_subscriber.cpp rover/autonomy/scripts/pcl_traversibility_score.cpp rover/autonomy/scripts/segment_pcl.cpp)
 # target_link_libraries(lidar_pcl_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES})
 
