--- a/rover/autonomy/config/costmap_common.yaml
+++ b/rover/autonomy/config/costmap_common.yaml
@@ -13,12 +13,12 @@ raytrace_range: 6.0
 
 #layer definitions
 static:
-    map_topic: /map
+    map_topic: map
     subscribe_to_updates: true
 
 obstacles_laser:
     observation_sources: point_cloud_sensor
-    point_cloud_sensor: {sensor_frame: zed2_left_camera_frame, data_type: PointCloud2, topic: //zed_node/point_cloud/cloud_registered, marking: true, clearing: true} # lidar topic
+    point_cloud_sensor: {sensor_frame: zed2_left_camera_frame, data_type: PointCloud2, topic: /zed_node/point_cloud/cloud_registered, marking: true, clearing: true} # lidar topic
     # laser_scan_sensor: {sensor_frame: velodyne, data_type: LaserScan, topic: /scan_collapsed, marking: true, clearing: true} # scan topic
 
 inflation:
