--- a/rover/autonomy/config/global_costmap.yaml
+++ b/rover/autonomy/config/global_costmap.yaml
@@ -1,12 +1,13 @@
 global_frame: map # sometimes '/map' works but in documentation, it says that '/map' is discontinued in noetic. Use 'map'
-rolling_window: true
-track_unknown_space: true # false so that it traverses unknown space freely as if there is no obstacle
+# Whether or not to use a rolling window version of the costmap. 
+rolling_window: false # If the static_map parameter is set to true, this parameter must be set to false.
+track_unknown_space: false # false so that it traverses unknown space freely as if there is no obstacle
 
 plugins:
   - {name: static,                  type: "costmap_2d::StaticLayer"}
   - {name: inflation,               type: "costmap_2d::InflationLayer"}
 
-update_frequency: 2.0
+update_frequency: 0.2
 width: 200
 height: 200
 
