--- a/rover/autonomy/config/local_costmap.yaml
+++ b/rover/autonomy/config/local_costmap.yaml
@@ -1,7 +1,7 @@
 global_frame: odom # sometimes '/odom' works but in documentation, it says that '/odom' is discontinued in noetic. Use 'odom'
 rolling_window: true # If the static_map parameter is set to true, this should be set to false 
 # Says that we don't want the local planner to be initialized from a static map
-track_unknown_space: true
+track_unknown_space: false
 
 plugins:
   - {name: obstacles_laser,           type: "costmap_2d::ObstacleLayer"}
