--- a/rover/autonomy/config/move_base.yaml
+++ b/rover/autonomy/config/move_base.yaml
@@ -27,12 +27,12 @@ DWAPlannerROS:
   min_vel_rot: 2.0 # 0.4
 
   # Goal Tolerance Parameters
-  yaw_goal_tolerance: 0.2
-  xy_goal_tolerance: 0.2
+  yaw_goal_tolerance: 0.5
+  xy_goal_tolerance: 0.5
   latch_xy_goal_tolerance: false
 
   # # Forward Simulation Parameters
-  sim_time: 2.0
+  sim_time: 2.0 # how far in the future it simulates the path/trajectory (in seconds)
   prune_plan: false
   # sim_granularity: 0.02
   # vx_samples: 6
