Started working on obstacle avoidance using map from octomap and dwa planner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ find_package(catkin REQUIRED COMPONENTS
   tf2_ros
   tf2
   pcl_ros
+  octomap_msgs
 )
 
 
@@ -26,6 +27,7 @@ find_package(catkin REQUIRED COMPONENTS
 #include_directories(${GTSAM_INCLUDE_DIR})
 
 find_package(PCL 1.2 REQUIRED)
+find_package(octomap REQUIRED)
 
 # Variables set by the pcl config.cmake.in file
 include_directories(${PCL_INCLUDE_DIRS})
@@ -139,8 +141,9 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+  include
   ${catkin_INCLUDE_DIRS}
+  $(OCTOMAP_INCLUDE_DIRS)
 )
 
 ## Declare a C++ library
@@ -228,11 +231,11 @@ include_directories(
 add_executable(drive_sender_node rover/drive/src/drive_sender_node.cpp)
 target_link_libraries(drive_sender_node ${catkin_LIBRARIES})
 
-add_executable(GNSSLocalization rover/autonomy/src/GNSSLocalization.cpp)
-target_link_libraries(GNSSLocalization ${catkin_LIBRARIES})
+# add_executable(GNSSLocalization rover/autonomy/src/GNSSLocalization.cpp)
+# target_link_libraries(GNSSLocalization ${catkin_LIBRARIES})
 
-add_executable(GNSSTargetAid rover/autonomy/src/GNSSTargetAid.cpp)
-target_link_libraries(GNSSTargetAid ${catkin_LIBRARIES})
+# add_executable(GNSSTargetAid rover/autonomy/src/GNSSTargetAid.cpp)
+# target_link_libraries(GNSSTargetAid ${catkin_LIBRARIES})
 
 # add_executable(lidar_pcl_subscriber rover/autonomy/scripts/point_cloud_subscriber.cpp rover/autonomy/scripts/pcl_traversibility_score.cpp rover/autonomy/scripts/segment_pcl.cpp)
 # target_link_libraries(lidar_pcl_subscriber ${catkin_LIBRARIES} ${PCL_LIBRARIES})
@@ -245,6 +248,9 @@ target_link_libraries(GNSSTargetAid ${catkin_LIBRARIES})
 
 add_executable(arm_point_cloud_assembler rover/arm/ros1/arm_point_cloud_assembler.cpp)
 target_link_libraries(arm_point_cloud_assembler ${catkin_LIBRARIES} ${PCL_LIBRARIES})
+
+add_executable(dwa_planner rover/autonomy/scripts/obstacle_avoidance/dwa_planner.cpp)
+target_link_libraries(dwa_planner ${catkin_LIBRARIES} ${OCTOMAP_LIBRARIES})
 
 # catkin_install_python(PROGRAMS scripts/base_comms_check.py scripts/jetson_comms_check.py
 #  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
