--- a/rover/autonomy/config/dwa_planner.yaml
+++ b/rover/autonomy/config/dwa_planner.yaml
@@ -1,3 +1,5 @@
+controller_frequency: 1 # Rate in Hz
+
 v_min: -2.0
 v_max: 2.0
 w_min: -1.0
@@ -6,7 +8,7 @@ w_max: 1.0
 max_accel_lin: 0.5
 max_accel_ang: 0.2
 dt: 0.1     # time step for simulation
-sim_time: 2         # simulation time in sec (Time horizon)    
+sim_time: 2 # simulation time in sec (Time horizon)    
 num_samples_v: 100
 num_samples_w: 100
 
