--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,7 @@
   <build_depend>ros_phoenix</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>message_filters</build_depend>
+  <build_depend>controller_manager</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
@@ -29,6 +30,7 @@
   <exec_depend>ros_phoenix</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>message_filters</exec_depend>
+  <exec_depend>controller_manager</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
