--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ rover/autonomy/tests/icsens-visual-inertial-lidar-dataset-1.bag
 *.pyo
 __pycache__/
 rover/arm/scripts/__pycache__/
+tile_cache/
+genie_pics/
