--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ rover/autonomy/tests/icsens-visual-inertial-lidar-dataset-1.bag
 __pycache__/
 rover/arm/scripts/__pycache__/
 scripts/GUI/tile_cache/
+genie_pics/
